<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/you_win" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/put_name" />

    <EditText
        android:id="@+id/putName"
        android:layout_width="150dp"
        android:maxLength="10"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />


    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

</LinearLayout>